crates/krypton/tests/krypton/snapshots/main__krypton__inspect__inspect_borrow_question_mark.snap
---
source: crates/krypton/tests/krypton/inspect.rs
assertion_line: 77
expression: output
---
extern java "krypton.runtime.KryptonIO" {
    fun println[a](x: a) -> Unit
}

type File = MkFile(String)

impl Disposable[File] {
    fun dispose(f: ~File) -> Unit = match f {
        MkFile(_) => println("closed"),
    }
}

fun peek(&f: ~File) -> Int = 1

fun fallible() -> Result[String, Int] = Err("fail")

fun work() -> Result[String, Int] {
    let f: ~File = MkFile("/tmp/x")
    peek(f)
    # close(f) [early return]
    let x: Int = fallible()?
    Ok(x)
    # close(f) [scope exit]
}

fun main() -> Unit = match work() {
    Ok(v) => println(v),
    Err(e) => println("err"),
}
