crates/krypton/tests/krypton/snapshots/main__krypton__inspect__inspect_borrow_then_consume.snap
---
source: crates/krypton/tests/krypton/inspect.rs
assertion_line: 65
expression: output
---
extern java "krypton.runtime.KryptonIO" {
    fun println[a](x: a) -> Unit
}

type Handle = MkHandle(String)

impl Disposable[Handle] {
    fun dispose(h: ~Handle) -> Unit = match h {
        MkHandle(_) => println("closed"),
    }
}

fun peek(&h: ~Handle) -> Unit = println("peek")

fun main() -> Unit {
    let h: ~Handle = MkHandle("test")
    peek(h)
    dispose(h)
    # move: h
}
