crates/krypton/tests/krypton/snapshots/main__krypton__inspect__inspect_consumed.snap
---
source: crates/krypton/tests/krypton/inspect.rs
expression: output
---
extern java "krypton.runtime.KryptonIO" {
    fun println[a](x: a) -> Unit
}

type Handle = MkHandle(String)

impl Disposable[Handle] {
    fun dispose(h: ~Handle) -> Unit = println("manual_close")
}

fun main() -> Unit {
    let h: ~Handle = MkHandle("test")
    println("opened")
    dispose(h)
    # move: h
}
