crates/krypton/tests/krypton/snapshots/main__krypton__inspect__inspect_question_mark.snap
---
source: crates/krypton/tests/krypton/inspect.rs
expression: output
---
extern java "krypton.runtime.KryptonIO" {
    fun println[a](x: a) -> Unit
}

type Handle = MkHandle(String)

impl Disposable[Handle] {
    fun dispose(h: ~Handle) -> Unit = match h {
        MkHandle(_) => println("closed"),
    }
}

fun fallible() -> Result[String, Int] = Err("fail")

fun work() -> Result[String, Int] {
    let h: ~Handle = MkHandle("test")
    println("opened")
    # close(h) [early return]
    let x: Int = fallible()?
    Ok(x)
    # close(h) [scope exit]
}

fun main() -> Unit = match work() {
    Ok(v) => println(v),
    Err(e) => println("err"),
}
