crates/krypton/tests/krypton/snapshots/main__krypton__inspect__inspect_shadow.snap
---
source: crates/krypton/tests/krypton/inspect.rs
expression: output
---
extern java "krypton.runtime.KryptonIO" {
    fun println[a](x: a) -> Unit
}

type Handle = MkHandle(String)

impl Disposable[Handle] {
    fun dispose(h: ~Handle) -> Unit = match h {
        MkHandle(_) => println("closed"),
    }
}

fun main() -> Unit {
    let h: ~Handle = MkHandle("1")
    println("open1")
    # close(h) [shadow]
    let h: ~Handle = MkHandle("2")
    println("open2")
    # close(h) [scope exit]
}
